{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 113,
  "lineage": "77a16465-9fc5-6f57-f7d0-18fa9f49f12e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:vpc/vpc-0e7b1bb99d6028b8e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-017c97054a73a819f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-fd4fc187",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "VPC"
                ]
              }
            ],
            "id": "vpc-0e7b1bb99d6028b8e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d1ebb9c0ddf72f89",
            "owner_id": "629760017811",
            "tags": {
              "Name": "VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:security-group/sg-0287be8d4c93fb7d1",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0287be8d4c93fb7d1",
            "ingress": [],
            "name": "cluster_sg",
            "name_prefix": "",
            "owner_id": "629760017811",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7b1bb99d6028b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:security-group/sg-0d7974f6750e7ad69",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7974f6750e7ad69",
            "ingress": [],
            "name": "windows_sg",
            "name_prefix": "",
            "owner_id": "629760017811",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7b1bb99d6028b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3646919247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0287be8d4c93fb7d1",
            "self": false,
            "source_security_group_id": "sg-0d7974f6750e7ad69",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster_sg",
            "aws_security_group.windows_sg",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule_worker_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-4217779525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d7974f6750e7ad69",
            "self": false,
            "source_security_group_id": "sg-0287be8d4c93fb7d1",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster_sg",
            "aws_security_group.windows_sg",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    }
  ]
}